[package]
name = "aadiff"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
either = "1"

zoe = { git = "https://github.com/CDCgov/zoe.git", tag = "v0.0.14", default-features = false, features = [
    "multiversion",
] }

#foldhash = "*"
#rayon = "*"
#num_cpus = "*"

[profile.release]
strip = true
lto = "thin"
